1.7.12: Incomplete Plugin Reorganization P.2